# prefect-email-scheduler

./: .gitignore  CLAUDE.md  README.md  deploy.py  email_flow.py  email_template.py  example_email_send_message_flow-deployment.yaml  main.py  pyproject.toml  requirements.txt  starter.py
prefect-email-automation/: deploy.py
tests/: __init__.py  conftest.py  test_email_flow.py  test_email_template.py
